--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,8 @@
             "rules": {
                 "import/no-mutable-exports": "off",
                 "import/prefer-default-export": "off",
-                "no-multiple-empty-lines": "off"
+                "no-multiple-empty-lines": "off",
+                "semi": ["error", "never"]
             } 
         }
     ],
