--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,12 @@
                 "import/no-mutable-exports": "off",
                 "import/prefer-default-export": "off",
                 "no-multiple-empty-lines": "off",
+                "arrow-parens": ["error", "as-needed"],
+                "indent": ["error", 2, {"flatTernaryExpressions": true}],
+                "no-multi-spaces": ["error", {"exceptions": { "ConditionalExpression": true }}],
+                "no-nested-ternary": "off",
+                "object-curly-newline": ["error", {"consistent": true}],
+                "object-curly-spacing": ["error", "always"],
                 "semi": ["error", "never"]
             } 
         }
@@ -36,7 +42,7 @@
             "no-multi-spaces": ["error", {"exceptions": { "ConditionalExpression": true }}],
             "no-nested-ternary": "off",
             "object-curly-newline": ["error", {"consistent": true}],
-            "object-curly-spacing": ["error", "never"],
+            "object-curly-spacing": ["error", "always"],
             "semi": ["error", "never"]
           }
     }
