--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,14 +18,7 @@
                 "import/no-extraneous-dependencies": "off",
                 "import/no-mutable-exports": "off",
                 "import/prefer-default-export": "off",
-                "no-multiple-empty-lines": "off",
-                "arrow-parens": ["error", "as-needed"],
-                "indent": ["error", 2, {"flatTernaryExpressions": true}],
-                "no-multi-spaces": ["error", {"exceptions": { "ConditionalExpression": true }}],
-                "no-nested-ternary": "off",
-                "object-curly-newline": ["error", {"consistent": true}],
-                "object-curly-spacing": ["error", "always"],
-                "semi": ["error", "never"]
+                "no-multiple-empty-lines": "off"
             } 
         }
     ],
@@ -35,15 +28,15 @@
     },
     "parserOptions": {
         "ecmaVersion": 2018,
-        "sourceType": "module",
-        "rules": {
-            "arrow-parens": ["error", "as-needed"],
-            "indent": ["error", 2, {"flatTernaryExpressions": true}],
-            "no-multi-spaces": ["error", {"exceptions": { "ConditionalExpression": true }}],
-            "no-nested-ternary": "off",
-            "object-curly-newline": ["error", {"consistent": true}],
-            "object-curly-spacing": ["error", "always"],
-            "semi": ["error", "never"]
-          }
+        "sourceType": "module"
+    },
+    "rules": {
+        "arrow-parens": ["error", "as-needed"],
+        "indent": ["error", 2, {"flatTernaryExpressions": true}],
+        "no-multi-spaces": ["error", {"exceptions": { "ConditionalExpression": true }}],
+        "no-nested-ternary": "off",
+        "object-curly-newline": ["error", {"consistent": true}],
+        "object-curly-spacing": ["error", "always"],
+        "semi": ["error", "never"]
     }
 }
