--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@rollup/plugin-replace": "^2.3.1",
     "folktale": "^2.3.2",
     "ramda": "^0.27.0",
     "rxjs": "^6.5.4",
