--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
             "files": ["**/*.svelte"],
             "processor": "svelte3/svelte3",
             "rules": {
+                "import/first": "off",
                 "import/no-extraneous-dependencies": "off",
                 "import/no-mutable-exports": "off",
                 "import/prefer-default-export": "off",
